# incolumepy.prospect.nlp_basic

./: .gitignore  Makefile  README.md  pyproject.toml
.run/: jupyter-run.run.xml
incolumepy/prospect/nlp_basic/: __init__.py
incolumepy/prospect/nlp_basic/notebooks/: How-to-Extract-Textfrom-PDF.ipynb  NLP-text-classification.ipynb  handler-pdf.ipynb  nlp_0.ipynb
tests/: __init__.py  test_incolumepy_nlp_basic.py
